# transformez

./: .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: install_matrix.yml  pr-rtd-link.yml  publish.yaml  test.yml  typecheck.yml  zizmor.yml
docs/source/: conf.py  index.md
docs/source/api/: api.md  index.md
docs/source/user_guide/: cli_usage.md  index.md  installation.md  methodology.md  philosophy.md  supported_datums.md  usage.md  validation.md
src/transformez/: __init__.py  api.py  cli.py  definitions.py  grid_engine.py  hooks.py  htdp.py  modules.py  spatial.py  srs.py  transform.py  utils.py  vdatum.py
tests/: test_cli.py
