[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'transformez'
version = '0.2.0'
description = 'A standalone utility for vertical elevation datum transformations.'
readme = "README.md"
authors = [{ name = 'Matthew Love' }]
license = { file = 'LICENSE' }
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: GIS',
]
dependencies = [
    'numpy<2.0.0',
    'pyproj',
    'rasterio',
    'fetchez>0.3.3',
]

keywords = ["Geospatial"]

[project.entry-points."fetchez.plugins"]
transformez = "transformez"

[project.scripts]
transformez = 'transformez.cli:transformez_cli'

[project.urls]
Homepage = "https://github.com/ciresdem/transformez"
Issues = "https://github.com/ciresdem/transformez/issues"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages inside the 'src' folder
include = ["transformez*"]  # Include the package named 'transformez'
exclude = ["tests*", "docs*", "scripts*", "examples*"]
namespaces = false
