[build-system]
requires = ["hatchling>=1.5.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = 'transformez'
description = 'A standalone utility for vertical elevation datum transformations.'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
    {name = "Christopher Amante", email = "christopher.amante@colorado.edu"},
    {name = "Elliot Lim", email = "elliot.lim@colorado.edu"},
    {name = "Michael MacFerrin", email = "michael.macferrin@colorado.edu"},
]
maintainers = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: GIS',
]
dependencies = [
    'numpy<2.0.0',
    'pyproj',
    'rasterio',
    'fetchez>0.3.3',
]

keywords = ["Geospatial"]

[project.entry-points."fetchez.plugins"]
transformez = "transformez"

[project.scripts]
transformez = 'transformez.cli:transformez_cli'

[project.urls]
Homepage = "https://github.com/continuous-dems/transformez"
Issues = "https://github.com/continuous-dems/transformez/issues"

# --- Build configuration ---

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.version]
path = "src/transformez/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/transformez"]

[tool.hatch.build.targets.sdist]
include = [
  "src/transformez",
  "tests",
  "CHANGELOG.md",
  "CITATION.cff",
  "CONTRIBUTING.md",
  "AUTHORS.md",
]
exclude = [
  ".github",
]

