[build-system]
requires = ["hatchling>=1.5.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = 'transformez'
description = 'A standalone utility for vertical elevation datum transformations.'
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
    {name = "Christopher Amante", email = "christopher.amante@colorado.edu"},
    {name = "Elliot Lim", email = "elliot.lim@colorado.edu"},
    {name = "Michael MacFerrin", email = "michael.macferrin@colorado.edu"},
    {name = "Matt Fisher", email = "mfisher87@gmail.com"},
]
maintainers = [
    {name = "Matthew Love", email = "matthew.love@colorado.edu"},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: GIS',
]
dependencies = [
    'numpy>1.24',
    'pyproj>3.6.1',
    'rasterio>1.4.0',
    'fetchez>=0.5.0',
    'scipy',
    'click',
]

keywords = ["Geospatial"]

[project.optional-dependencies]
preview = ["matplotlib"]

full = ["transformez[preview]"]

[dependency-groups]
dev = [
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.entry-points."fetchez.modules"]
transformez = "transformez"

[project.scripts]
transformez = 'transformez.cli:transformez_cli'

[project.urls]
Homepage = "https://github.com/continuous-dems/transformez"
Issues = "https://github.com/continuous-dems/transformez/issues"

# --- Build configuration ---

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.version]
path = "src/transformez/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/transformez"]

[tool.hatch.build.targets.sdist]
include = [
  "src/transformez",
  "tests",
  "CHANGELOG.md",
  "CITATION.cff",
  "CONTRIBUTING.md",
  "AUTHORS.md",
]
exclude = [
  ".github",
]

# --- Devtools configuration ---

[tool.mypy]
mypy_path = "src"
packages = ["transformez"]
python_version = "3.12"
disable_error_code = ["import-untyped"]
# strict = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "rasterio.*",
    "scipy.*",
    "pyproj.*",
    "fetchez.*",
]
ignore_missing_imports = true
follow_untyped_imports = true
